# SatelliteOrbits

./: .gitignore  README.md  Trajectory (1).ipynb  Trajectory (2).ipynb  Trajectory (3).ipynb  Trajectory (4).ipynb  Trajectory (5).ipynb  Trajectory (6).ipynb  Trajectory (7).ipynb  Trajectory (8).ipynb  Trajectory.ipynb  Trajectory_Final_Simulation.ipynb  pyproject.toml
two_bodies/: Pietro's trys:  RK_N_bodies.ipynb  Trajectory_Prediction_KalmanFilter.ipynb  lagrange_hamilton_initial_simulation.py  run.py  runge_kutta_2bodies_example.ipynb  simulation.py
